--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1,19 +1,139 @@
+/* TOP BAR */
+
+nav {
+  position:relative;
+  display:block;
+  padding-top:1rem;
+  padding-bottom:1rem;
+  overflow:hidden;
+  border-bottom:solid 2px blue;
+  text-align:center;
+  background-color:#DDD;
+}
+nav span {
+  position:relative;
+  display:inline-block;
+  padding-left:1rem;
+  padding-right:1rem;
+}
+nav span.home {
+  float:left;
+}
+nav span.links {
+  float:right;
+}
+nav input {
+  padding:0;
+  border:0;
+  border-bottom: dashed 1px red;
+  background-color:#DDD;
+}
+nav button {
+  border:0;
+  color:red;
+  background-color:#DDD;
+}
+nav a {
+  text-decoration:none;
+  color:red;
+}
+nav a.now {
+  text-decoration:underline red dashed;
+}
+nav input::-webkit-input-placeholder { /* Edge */
+  color: #FFF;
+}
+nav input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #FFF;
+}
+::placeholder {
+  color: #FFF;
+}
+
+/* CONTAINER */
+
+.container.clearfix {
+        overflow: hidden;
+	padding: 1rem;
+}
+
+h4 {
+  color: #888;
+  padding-bottom:0.5rem;
+  margin-top:1rem; 
+  padding:0;
+  border-top:solid 1px #EEE;
+  font-size:0.8rem;
+  font-weight:normal;
+}
+div.product-image {
+  display: block;
+}
+
+img {
+  width:100%;
+  height: auto;
+}
+  
+div.product-image img {
+  height: 480px;
+  width: auto;
+}
+
 /* JOZSEF */
 
 .vendors .vendor-header {
     max-width: 100%;
     min-width: 100%;
-    margin-bottom: 2em;
+    margin-bottom: 2rem;
 }
 .vendors .vendor-avatar {
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
+}
+
+/* PAGINATOR */
+
+ul.pagination li a {
+        color: rgba(0, 0 ,0 , 0.54);
+}
+
+ul.pagination li.active a {
+        background-color: #DCE47E;
+        color: #FFF;
+        font-weight: bold;
+        cursor: default;
+}
+ul.pagination .disabled:hover a {
+        background: none;
+}
+
+.paginator {
+        text-align: center;
+}
+
+.paginator ul.pagination li {
+        float: none;
+        display: inline-block;
+	margin: 0.5rem;
+}
+
+.paginator p {
+        text-align: center;
+        color: rgba(0, 0 ,0 , 0.54);
+}
+
+.asc:after {
+        content: " \2193";
+}
+.desc:after {
+        content: " \2191";
 }
 
 /* LESZEK */
 
 span.vendor {
-  padding-top: 10px;
-  padding-right: 10px;
+  margin-top: 1rem;
+  margin-right: 1rem;
   position:relative;
   display:inline-block;
   height:120px;
@@ -21,18 +141,19 @@ span.vendor {
   overflow:hidden;
 }
 span.vendor div.image {
-  padding-right: 10px;
+  margin-right: 1rem;
   position:relative;
   display:block;
   float:left;
-  height:128px;
-  width:128px;
+  height:120px;
+  width:120px;
   overflow:hidden;
+  background-color:#F8F8F8;
 }
 
 span.listing {
-  padding-top: 10px;
-  padding-right: 10px;
+  margin-top: 1rem;
+  margin-right: 1rem;
   position:relative;
   display:inline-block;
   height:240px;
@@ -40,29 +161,30 @@ span.listing {
   overflow:hidden;
 }
 span.listing div.image {
-  padding-right: 10px;
+  margin-right: 1rem;
   position:relative;
   display:block;
   float:left;
   height:240px;
   width:240px;
   overflow:hidden;
+  background-color:#F8F8F8;
 }
 span.listing div.unmoderated {
-  padding-left: 10px;
+  margin-left: 1rem;
   position:relative;
   display:inline-block;
   float:right;
   color:red
 }
 span.listing div.moderated {
-  padding-left: 10px;
+  margin-left: 1rem;
   position:relative;
   display:inline-block;
   float:right;
 }
 span.listing div.fee a {
-  padding-left: 10px;
+  margin-left: 1rem;
   position:relative;
   display:inline-block;
   float:right;
