--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -213,9 +213,13 @@ span.listing div.image {
   overflow:hidden;
   background-color:#F8F8F8;
 }
-span.listing div.image img {
-  height: auto;
+span.listing div.image, span.vendor div.image {
+  position: relative;
   width: 120px;
+  height: 120px;
+}
+span.listing div.image amp-img img, span.vendor div.image amp-img img {
+  object-fit: contain;
 }
 span.listing div.price {
   margin-top: 0.2rem;
