--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -167,6 +167,10 @@ div.product-image img {
     margin-bottom: 1rem;
 }
 
+.text-center {
+    text-align: center;
+}
+
 /* PAGINATOR */
 
 ul.pagination {
