--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -23,112 +23,136 @@ nav {
 		color: #ff8553;
 		font-size: 1.2em;
 	}
-
-	.nav > div {
-		float: left;
+	.nav {
 		@media only screen and (max-width: 784px) {
-			float: none;
-			width: auto;
-			margin-right: 0;
-			margin-left: 0;
-			min-width: 0;
+			display: flex;
+			flex-wrap: wrap;
 		}
-
-		&.clear {
-			float: none;
-			clear: both;
-			height: auto;
-		}
-
-		&.home {
-			margin-right: 15px;
-		}
-
-		&.search {
-			margin-right: 0;
-			margin-top: 9px;
-			min-width: 500px;
-			@media only screen and (max-width: 972px) {
-				min-width: 212px;
-			}
-			@media only screen and (max-width: 260px) {
-				float: none;
-				width: auto;
-				min-width: 0;
-			}
-
-			input {
-				float: left;
-				background-color: white;
-				border: 2px solid #c0c0c0;
-				color: #aaaaaa;
-				width: calc(100% - 104px);
-				display: block;
-				padding: 5px 0 4px 20px;
-
-				&:focus {
-					color: black;
-				}
-
-				&::placeholder {
-					color: #aaaaaa;
-					opacity: 1;
-				}
-
-				&:focus::placeholder {
-					color: black;
-				}
-
-				&::-webkit-input-placeholder {
-					/* Edge */
-					color: #aaaaaa;
-					opacity: 1;
-				}
-
-				&:focus::-webkit-input-placeholder {
-					color: black;
-				}
-
-				&:-ms-input-placeholder {
-					/* Internet Explorer 10-11 */
-					color: #aaaaaa;
-					opacity: 1;
-				}
-
-				&:focus:-ms-input-placeholder {
-					color: black;
-				}
-			}
-
-			button {
-				border: 2px solid #c0c0c0;
-				border-left: none;
-				padding: 5px 25px 4px;
-				float: left;
-			}
-		}
-
-		&.links {
-			margin-top: 9px;
-			line-height: 29px;
-			margin-right: 20px;
-			float: right;
+		& > div {
+			float: left;
 			@media only screen and (max-width: 784px) {
 				float: none;
 				width: auto;
 				margin-right: 0;
 				margin-left: 0;
 				min-width: 0;
+				flex-basis: 50%;
 			}
 
-			span {
-				display: inline-block;
-				padding-left: 10px;
-				padding-right: 10px;
+			&.home {
+				margin-right: 15px;
+				@media only screen and (max-width: 784px) {
+					margin-right: 0;
+					a {
+						display: block;
+						float:right;
+					}
+				}
+			}
+
+			&.search {
+				margin-right: 0;
+				margin-top: 9px;
+				min-width: calc(100% - 500px);
+
+				@media only screen and (max-width: 784px) {
+					order: 2;
+					flex-grow: 2;
+					width: auto;
+				}
+
+				input {
+					float: left;
+					background-color: white;
+					border: 2px solid #c0c0c0;
+					color: #aaaaaa;
+					width: calc(100% - 104px);
+					display: block;
+					padding: 5px 0 4px 20px;
+
+					@media only screen and (max-width: 784px) {
+						width: calc(80% - 104px);
+						margin-left: 10%;
+					}
+					@media only screen and (max-width: 300px) {
+						width: calc(100% - 104px);
+						margin-left: 0;
+					}
+
+					&:focus {
+						color: black;
+					}
+
+					&::placeholder {
+						color: #aaaaaa;
+						opacity: 1;
+					}
+
+					&:focus::placeholder {
+						color: black;
+					}
+
+					&::-webkit-input-placeholder {
+						/* Edge */
+						color: #aaaaaa;
+						opacity: 1;
+					}
+
+					&:focus::-webkit-input-placeholder {
+						color: black;
+					}
+
+					&:-ms-input-placeholder {
+						/* Internet Explorer 10-11 */
+						color: #aaaaaa;
+						opacity: 1;
+					}
+
+					&:focus:-ms-input-placeholder {
+						color: black;
+					}
+				}
+
+				button {
+					border: 2px solid #c0c0c0;
+					border-left: none;
+					padding: 5px 25px 4px;
+					float: left;
+				}
+			}
+
+			&.links {
+				margin-top: 9px;
+				line-height: 29px;
+				margin-right: 20px;
+				float: right;
+				span {
+					display: inline-block;
+					padding-left: 10px;
+					padding-right: 10px;
+				}
+				@media only screen and (max-width: 784px) {
+					order: 1;
+					width: auto;
+					margin-right: 0;
+					margin-left: 0;
+					min-width: 0;
+					span {
+						float:left;
+						&:first-child {
+							margin-left: 10px;
+						}
+					}
+				}
 			}
 		}
 	}
+}
 
+.clear {
+	float: none;
+	clear: both;
+	height: auto;
 }
 
 /* CONTAINER */
