--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -41,11 +41,28 @@ nav {
 
 			&.home {
 				margin-right: 15px;
+				a {
+					display: block;
+					min-width: 241px;
+				}
 				@media only screen and (max-width: 784px) {
 					margin-right: 0;
 					a {
 						display: block;
 						float:right;
+						min-width: 180px;
+						height: 29px;
+						margin-top: 9px;
+					}
+				}
+				@media only screen and (max-width: 380px) {
+					flex-basis: 100%;
+					a {
+						float:none;
+						min-width: 0;
+						width: 70%;
+						margin-left: auto;
+						margin-right: auto;
 					}
 				}
 			}
@@ -141,6 +158,17 @@ nav {
 						float:left;
 						&:first-child {
 							margin-left: 10px;
+						}
+					}
+				}
+				@media only screen and (max-width: 380px) {
+					flex-basis: 100%;
+					float:none;
+					text-align: center;
+					span {
+						float: none;
+						&:first-child {
+							margin-left: 0;
 						}
 					}
 				}
