--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -321,9 +321,11 @@ span {
 		display: inline-block;
 		height: 120px;
 		width: 330px;
-		overflow-y: hidden;
+		overflow: hidden;
 		@media only screen and (max-width: 344px) {
 			width: 100%;
+			margin-right: 0;
+			display: block;
 		}
 	}
 }
