--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -15,6 +15,7 @@ nav {
 	border: none;
 	text-align: center;
 	padding: 0.3rem 0.5rem;
+
 	span.now a {
 		border-bottom: 2px solid #ff8553;
 	}
@@ -23,11 +24,13 @@ nav {
 		color: #ff8553;
 		font-size: 1.2em;
 	}
+
 	.nav {
 		@media only screen and (max-width: 784px) {
 			display: flex;
 			flex-wrap: wrap;
 		}
+
 		& > div {
 			float: left;
 			@media only screen and (max-width: 784px) {
@@ -41,15 +44,17 @@ nav {
 
 			&.home {
 				margin-right: 15px;
+
 				a {
 					display: block;
 					min-width: 241px;
 				}
+
 				@media only screen and (max-width: 784px) {
 					margin-right: 0;
 					a {
 						display: block;
-						float:right;
+						float: right;
 						min-width: 180px;
 						height: 29px;
 						margin-top: 9px;
@@ -58,7 +63,7 @@ nav {
 				@media only screen and (max-width: 380px) {
 					flex-basis: 100%;
 					a {
-						float:none;
+						float: none;
 						min-width: 0;
 						width: 70%;
 						margin-left: auto;
@@ -145,11 +150,13 @@ nav {
 				line-height: 29px;
 				margin-right: 20px;
 				float: right;
+
 				span {
 					display: inline-block;
 					padding-left: 10px;
 					padding-right: 10px;
 				}
+
 				@media only screen and (max-width: 784px) {
 					order: 1;
 					width: auto;
@@ -157,7 +164,8 @@ nav {
 					margin-left: 0;
 					min-width: 0;
 					span {
-						float:left;
+						float: left;
+
 						&:first-child {
 							margin-left: 10px;
 						}
@@ -165,10 +173,11 @@ nav {
 				}
 				@media only screen and (max-width: 380px) {
 					flex-basis: 100%;
-					float:none;
+					float: none;
 					text-align: center;
 					span {
 						float: none;
+
 						&:first-child {
 							margin-left: 0;
 						}
@@ -292,41 +301,30 @@ ul.pagination {
 
 /* LESZEK */
 
-span {
-	&.vendor {
-		margin-top: 1rem;
+span.listing, span.vendor {
+	margin-top: 1rem;
+	margin-right: 1rem;
+	position: relative;
+	display: inline-block;
+	height: 120px;
+	width: 330px;
+	overflow: hidden;
+
+	div.image {
 		margin-right: 1rem;
 		position: relative;
-		display: inline-block;
+		display: block;
+		float: left;
 		height: 120px;
-		width: 330px;
-		overflow-y: hidden;
-
-		div.image {
-			margin-right: 1rem;
-			position: relative;
-			display: block;
-			float: left;
-			height: 120px;
-			width: 120px;
-			overflow: hidden;
-			background-color: #F8F8F8;
-		}
+		width: 120px;
+		overflow: hidden;
+		background-color: #F8F8F8;
 	}
 
-	&.listing {
-		margin-top: 1rem;
-		margin-right: 1rem;
-		position: relative;
-		display: inline-block;
-		height: 120px;
-		width: 330px;
-		overflow: hidden;
-		@media only screen and (max-width: 370px) {
-			width: 100%;
-			margin-right: 0;
-			display: block;
-		}
+	@media only screen and (max-width: 370px) {
+		width: 100%;
+		margin-right: 0;
+		display: block;
 	}
 }
 
