--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -85,12 +85,12 @@ nav {
 
 				input {
 					float: left;
-					background-color: white;
-					border: 2px solid #c0c0c0;
+					background-color: #ebebeb;
+					border: 1px solid #c0c0c0;
 					color: #aaaaaa;
 					width: calc(100% - 104px);
 					display: block;
-					padding: 5px 0 4px 20px;
+					padding: 5px 0 5px 20px;
 					border-radius: 0;
 					box-shadow: none;
 
@@ -138,10 +138,21 @@ nav {
 				}
 
 				button {
-					border: 2px solid #c0c0c0;
+					border: 1px solid #c0c0c0;
+					background-color: white;
 					border-left: none;
-					padding: 5px 25px 4px;
+					padding: 5px 25px 6px;
 					float: left;
+					font-weight:bold;
+					font-size: 13px;
+					-webkit-transition: background-color 300ms ease;
+					-moz-transition: background-color 300ms ease;
+					-ms-transition: background-color 300ms ease;
+					-o-transition: background-color 300ms ease;
+					transition: background-color 300ms ease;
+					&:hover, &:active {
+						background-color: #f5f5f5;
+					}
 				}
 			}
 
