--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -56,7 +56,7 @@ nav {
 						display: block;
 						float: right;
 						min-width: 180px;
-						height: 29px;
+						height: 30px;
 						margin-top: 9px;
 					}
 				}
@@ -90,7 +90,8 @@ nav {
 					color: #aaaaaa;
 					width: calc(100% - 104px);
 					display: block;
-					padding: 5px 0 5px 20px;
+					padding: 0 0 0 20px;
+					line-height: 28px;
 					border-radius: 0;
 					box-shadow: none;
 
@@ -141,7 +142,8 @@ nav {
 					border: 1px solid #c0c0c0;
 					background-color: white;
 					border-left: none;
-					padding: 5px 25px 6px;
+					padding: 0 25px;
+					line-height: 28px;
 					float: left;
 					font-weight:bold;
 					font-size: 13px;
@@ -158,7 +160,7 @@ nav {
 
 			&.links {
 				margin-top: 9px;
-				line-height: 29px;
+				line-height: 30px;
 				margin-right: 20px;
 				float: right;
 
@@ -208,7 +210,10 @@ nav {
 /* CONTAINER */
 
 .container.clearfix {
-	padding: 0.5rem;
+	padding: 1.2rem;
+	@media only screen and (max-width: 784px) {
+		padding: 0.5rem;
+	}
 }
 
 h4 {
