--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -210,8 +210,11 @@ nav {
 /* CONTAINER */
 
 .container.clearfix {
-	padding: 1.2rem;
-	@media only screen and (max-width: 784px) {
+	padding: 4rem;
+	@media only screen and (max-width: 803px) {
+		padding: 1rem;
+	}
+	@media only screen and (max-width: 480px) {
 		padding: 0.5rem;
 	}
 }
