--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -9,6 +9,14 @@ a {
 	text-decoration: none;
 }
 
+pre {
+	background: none repeat scroll 0 0 #FFF;
+	box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.24);
+	margin: 15px 0;
+	color: red;
+	padding: 5px;
+}
+
 /* TOP BAR */
 
 nav {
@@ -26,21 +34,8 @@ nav {
 	}
 
 	.nav {
-		@media only screen and (max-width: 784px) {
-			display: flex;
-			flex-wrap: wrap;
-		}
-
 		& > div {
 			float: left;
-			@media only screen and (max-width: 784px) {
-				float: none;
-				width: auto;
-				margin-right: 0;
-				margin-left: 0;
-				min-width: 0;
-				flex-basis: 50%;
-			}
 
 			&.home {
 				margin-right: 15px;
@@ -48,39 +43,43 @@ nav {
 				a {
 					display: block;
 					min-width: 241px;
+
+					.mobile {
+						display: none;
+					}
 				}
 
 				@media only screen and (max-width: 784px) {
-					margin-right: 0;
 					a {
-						display: block;
-						float: right;
-						min-width: 180px;
-						height: 30px;
-						margin-top: 9px;
+						min-width: 42px;
+
+						.desktop {
+							display: none;
+						}
+
+						.mobile {
+							display: block;
+						}
 					}
 				}
-				@media only screen and (max-width: 380px) {
-					flex-basis: 100%;
-					a {
-						float: none;
-						min-width: 0;
-						width: 70%;
-						margin-left: auto;
-						margin-right: auto;
-					}
+				@media only screen and (max-width: 360px) {
+					margin-right: 5px;
 				}
 			}
 
 			&.search {
 				margin-right: 0;
 				margin-top: 9px;
-				min-width: calc(100% - 500px);
+				width: calc(100% - 545px);
 
 				@media only screen and (max-width: 784px) {
-					order: 2;
-					flex-grow: 2;
-					width: auto;
+					.desktop {
+						display: none;
+					}
+					width: calc(100% - 147px);
+				}
+				@media only screen and (max-width: 360px) {
+					width: calc(100% - 106px);
 				}
 
 				input {
@@ -88,7 +87,7 @@ nav {
 					background-color: #ebebeb;
 					border: 1px solid #c0c0c0;
 					color: #aaaaaa;
-					width: calc(100% - 104px);
+					width: calc(100% - 117px);
 					display: block;
 					padding: 0 0 0 20px;
 					line-height: 30px;
@@ -96,12 +95,11 @@ nav {
 					box-shadow: none;
 
 					@media only screen and (max-width: 784px) {
-						width: calc(80% - 104px);
-						margin-left: 10%;
+						width: calc(100% - 86px);
 					}
-					@media only screen and (max-width: 300px) {
-						width: calc(100% - 104px);
-						margin-left: 0;
+					@media only screen and (max-width: 360px) {
+						width: calc(100% - 45px);
+						padding: 0 0 0 7px;
 					}
 
 					&:focus {
@@ -145,15 +143,19 @@ nav {
 					padding: 0 25px;
 					line-height: 30px;
 					float: left;
-					font-weight:bold;
+					font-weight: bold;
 					font-size: 13px;
 					-webkit-transition: background-color 300ms ease;
 					-moz-transition: background-color 300ms ease;
 					-ms-transition: background-color 300ms ease;
 					-o-transition: background-color 300ms ease;
 					transition: background-color 300ms ease;
+
 					&:hover, &:active {
 						background-color: #f5f5f5;
+					}
+					@media only screen and (max-width: 360px) {
+						padding: 0 11px;
 					}
 				}
 			}
@@ -168,33 +170,22 @@ nav {
 					display: inline-block;
 					padding-left: 10px;
 					padding-right: 10px;
+
+					&.desktop {
+						@media only screen and (max-width: 784px) {
+							display: none;
+						}
+					}
+					@media only screen and (max-width: 360px) {
+						padding-left: 0;
+						padding-right: 5px;
+
+					}
 				}
 
 				@media only screen and (max-width: 784px) {
-					order: 1;
-					width: auto;
 					margin-right: 0;
-					margin-left: 0;
-					min-width: 0;
-					span {
-						float: left;
-
-						&:first-child {
-							margin-left: 10px;
-						}
-					}
-				}
-				@media only screen and (max-width: 380px) {
-					flex-basis: 100%;
-					float: none;
-					text-align: center;
-					span {
-						float: none;
-
-						&:first-child {
-							margin-left: 0;
-						}
-					}
+					margin-left: 5px;
 				}
 			}
 		}
