header link black + promote target blank

--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -28,11 +28,11 @@ nav {
 	padding: 0.3rem 0.5rem;
 
 	span.now a {
-		border-bottom: 2px solid #ff8553;
+		border-bottom: 2px solid black;
 	}
 
 	a {
-		color: #ff8553;
+		color: black;
 		font-size: 1.2em;
 	}
 
