--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -46,20 +46,40 @@ nav {
 
 			&.home {
 				margin-right: 15px;
+				margin-top: 9px;
 
 				a {
 					display: block;
-					min-width: 241px;
+					text-align: left;
 
 					.mobile {
 						display: none;
 					}
+					.logo-container {
+						height: 32px;
+						width: 31.26px;
+						float: left;
+						margin-right: 15px;
+						margin-left: 20px;
+						@media only screen and (max-width: 784px) {
+							margin:0;
+						}
+					}
+					.yellow, .black {
+						font-size: 1.2em;
+						line-height: 32px;
+					}
+					.yellow {
+						color: #ffbc00;
+					}
+					.black {
+						color: #424242;
+					}
 				}
 
 				@media only screen and (max-width: 784px) {
+					margin-right: 10px;
 					a {
-						min-width: 42px;
-
 						.desktop {
 							display: none;
 						}
@@ -77,16 +97,16 @@ nav {
 			&.search {
 				margin-right: 0;
 				margin-top: 9px;
-				width: calc(100% - 545px);
+				width: calc(100% - 500px);
 
 				@media only screen and (max-width: 784px) {
 					.desktop {
 						display: none;
 					}
-					width: calc(100% - 147px);
+					width: calc(100% - 127px);
 				}
 				@media only screen and (max-width: 360px) {
-					width: calc(100% - 106px);
+					width: calc(100% - 92px);
 				}
 
 				input {
