--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -37,7 +37,7 @@ nav {
 
 	a {
 		color: $brand-black;
-		font-size: 1.2em;
+		font-size: 18px;
 	}
 
 	.nav {
@@ -66,7 +66,7 @@ nav {
 						}
 					}
 					.yellow, .black {
-						font-size: 1.2em;
+						font-size: 18px;
 						line-height: 32px;
 					}
 					.yellow {
@@ -192,6 +192,18 @@ nav {
 				line-height: 30px;
 				margin-right: 20px;
 				float: right;
+				a {
+					margin-right: 10px;
+					span {
+						padding-right: 0;
+					}
+					@media only screen and (max-width: 784px) {
+						margin-right: 0;
+						span {
+							padding-right: 10px;
+						}
+					}
+				}
 
 				span {
 					display: inline-block;
@@ -206,7 +218,6 @@ nav {
 					@media only screen and (max-width: 360px) {
 						padding-left: 0;
 						padding-right: 5px;
-
 					}
 				}
 
