--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -295,6 +295,94 @@ div.product-image img {
 	.vendor-avatar {
 		margin-bottom: 1rem;
 	}
+	&.update {
+		label {
+			display: block;
+			clear: both;
+			font-size: 16px;
+			margin-bottom: 1em;
+		}
+		input {
+			background-color: #ebebeb;
+			border: 1px solid #c0c0c0;
+			color: $brand-grey;
+			width: calc(100% - 22px);
+			display: block;
+			padding: 0 0 0 20px;
+			line-height: 30px;
+			border-radius: 0;
+			box-shadow: none;
+			@media only screen and (max-width: 360px) {
+				padding: 0 0 0 7px;
+			}
+
+			&:focus {
+				color: $brand-black;
+			}
+
+			&::placeholder {
+				color: $brand-grey;
+				opacity: 1;
+			}
+
+			&:focus::placeholder {
+				color: $brand-black;
+			}
+
+			&::-webkit-input-placeholder {
+				/* Edge */
+				color: $brand-grey;
+				opacity: 1;
+			}
+
+			&:focus::-webkit-input-placeholder {
+				color: $brand-black;
+			}
+
+			&:-ms-input-placeholder {
+				/* Internet Explorer 10-11 */
+				color: $brand-grey;
+				opacity: 1;
+			}
+
+			&:focus:-ms-input-placeholder {
+				color: $brand-black;
+			}
+		}
+		.input {
+			margin-bottom: 1em;
+		}
+		button {
+			border: 1px solid #c0c0c0;
+			background-color: white;
+			padding: 0 25px;
+			line-height: 30px;
+			font-weight: bold;
+			font-size: 13px;
+			-webkit-transition: background-color 300ms ease;
+			-moz-transition: background-color 300ms ease;
+			-ms-transition: background-color 300ms ease;
+			-o-transition: background-color 300ms ease;
+			transition: background-color 300ms ease;
+
+			&:hover, &:active {
+				background-color: #f5f5f5;
+			}
+			@media only screen and (max-width: 360px) {
+				padding: 0 11px;
+			}
+		}
+		.update-response {
+			font-weight: bold;
+			margin-bottom: 2em;
+			&.error {
+				color: $brand-red;
+			}
+			&.success {
+				color: green;
+			}
+		}
+	}
 }
 
 .text-center {
